[project]
name = "fastapi-til"
version = "0.1.0"
description = "Things that I should have known before using FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg2>=2.9.9",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.31.1",
]

[tool.uv]
dev-dependencies = [
    "black",
    "pytest",
    "coverage[toml]",
    "mock",
    "mypy",
    "ruff",
    "testcontainers",
    "sqlalchemy[mypy]>=2.0.35",
]
